full-moon/tests/roblox_cases/fail/parser/missing_else_in_if_expression/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: expected `else` when parsing if then else expression
  ┌─ source.lua:6:1
  │
6 │ print("testing")
  │ ^^^^^

error[ast]: expected an expression
  ┌─ source.lua:1:16
  │
1 │ local endIndex = if a_condition
  │                ^


